2024-06-19  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.3.8

2024-06-18  Dirk Eddelbuettel  <edd@debian.org>

	* R/nanotime.R: Simplify one reference to RcppCCTZ
	* man/nanotime.Rd: Idem

	* inst/tinytest/test_nanoival.R: Condition some tests on being in an
	'extended' run

2024-06-16  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version and date

	* inst/include/nanotime/interval.hpp: Add extra braces
	* src/interval.cpp: Updated output stream helper
	* src/period.cpp: Idem

	* src/Makevars (CXX_STD): Set C++17
	* src/Makevars.win (CXX_STD): Idem
	* src/Makevars.ucrt: Removed

2024-06-14  Leonardo Silvestri  <lsilvestr@ztsdb.org>

	* src/Makevars.win: Remove -mno-ms-bitfields

2024-06-13  Leonardo Silvestri  <lsilvestr@ztsdb.org>

	* inst/include/nanotime/interval.hpp: NA behavior for bitfield

2024-06-11  Leonardo Silvestri  <lsilvestr@ztsdb.org>

	* inst/include/nanotime/interval.hpp: Initial fix for bitfield
	* inst/include/nanotime/period.hppL Idem
	* src/interval.cpp: Idem

2024-06-09  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Use tinyverse.netlify.app for dependency badge

2024-05-24  Leonardo Silvestri  <lsilvestr@ztsdb.org>

	* R/nanoduration.R: duration divided by duration returns double
	* inst/tinytest/test_nanoduration.R: additional test for the above

	* inst/include/nanotime/utilities.hpp: Use interface function Rf_asS4
	instead of internal SET_S4_OBJECT
	* src/interval.cpp: Change setting of S4 bit before names assigment

2024-04-28  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version and date

	* R/nanoperiod.R: Add missing backslash in code call
	* man/nanoperiod.Rd: Idem

2024-02-16  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v4,
	add r-ci-setup actions

2023-09-26  Leonardo Silvestri  <lsilvestri@ztsdb.org>

	* R/nanotime.R: Further refinement for default UTC timezone