@@ -1,8 +1,8 @@
 Package: nanotime
 Type: Package
 Title: Nanosecond-Resolution Time Support for R
-Version: 0.3.8
-Date: 2024-06-19
+Version: 0.3.9
+Date: 2024-06-21
 Author: Dirk Eddelbuettel and Leonardo Silvestri
 Maintainer: Dirk Eddelbuettel <edd@debian.org>
 Description: Full 64-bit resolution date and time functionality with
@@ -22,6 +22,6 @@ Collate: 'nanotime.R' 'nanoival.R' 'nanoduration.R' 'nanoperiod.R'
         'RcppExports.R'
 Encoding: UTF-8
 NeedsCompilation: yes
-Packaged: 2024-06-19 10:24:04 UTC; edd
+Packaged: 2024-06-21 14:33:31 UTC; edd
 Repository: CRAN
-Date/Publication: 2024-06-19 14:00:02 UTC
+Date/Publication: 2024-06-21 17:20:02 UTC
