@@ -1,20 +1,20 @@
-013a4afd819a01c4a94940b614df9df1 *ChangeLog
-048b0c4b7b84ba2a46aeaccd0c51a8ce *DESCRIPTION
+9d970a87846aaea7cb83b1ffdb1c4a3c *ChangeLog
+0199cdb8beb70d15d0561af80e9ea243 *DESCRIPTION
 13b69ea4df4fda6eda80d499fee574a8 *NAMESPACE
 d0e5f558664e47ad9849a0a8c0917c4f *R/RcppExports.R
 9d122087a3def1d637c75968740e157d *R/nanoduration.R
 40fd54cb15c037aa4439f4e0ed572363 *R/nanoival.R
 27723524500edbc441429058d2870910 *R/nanoperiod.R
 3a9f8ebda977ac435d56f5ed7f965da9 *R/nanotime.R
-0c8c3dca49d3157556c486f360c0f1d7 *README.md
+a92cd6caad33c2ab0445bf6208a85206 *README.md
 16ba287838805c4ad8e9a889cebcc352 *build/vignette.rds
 5e2d19193e19de97094be5c8e1475da1 *cleanup
 e891df765a0a3b337fe656e18bd2ac5f *demo/00Index
 96a72e2a6d51ab7ddf927a6b57e03463 *demo/ggplot2Example.R
 524ee00e164d537a07a28be1f0cfb8ee *demo/nanosecondDelayExample.R
-917181c728c06d1846ce61947d68cb57 *inst/NEWS.Rd
+2d915a3cffcdbe9bc240d69a9e7c0afe *inst/NEWS.Rd
 f6411e74660ca98c5c9c0f6a3684cf21 *inst/doc/nanotime-introduction.Rnw
-a64a6e17782ca0297ef80546ec0cfa67 *inst/doc/nanotime-introduction.pdf
+b58c6eefdefa614fdfd5d324cc61cdd8 *inst/doc/nanotime-introduction.pdf
 adef692683d6f7ce9ffee8b6865d25ec *inst/include/nanotime/duration.hpp
 a9a428be2c0d0c284a7bc45639e3b6a0 *inst/include/nanotime/globals.hpp
 e25cee68302afbd4f5bc70a7639e2d2c *inst/include/nanotime/interval.hpp
@@ -26,7 +26,7 @@ fafda05ad8776c7de2c8c18651a005ef *inst/include/nanotime/utilities.hpp
 9896774341556f8f92aebca6ae6b0232 *inst/tinytest/test_nanoduration.R
 5642519964b00ee4148a6a0874a7dc07 *inst/tinytest/test_nanoival.R
 f253c2790b8ba8b24ed75c930dc13eb5 *inst/tinytest/test_nanoperiod.R
-87f1f5062a0fe02fd9f42b8be48d14b7 *inst/tinytest/test_nanotime.R
+31e62d8309cbae8d0fb219502620c5e6 *inst/tinytest/test_nanotime.R
 c0e44816ea79a16af48d3568a1a763c9 *inst/tinytest/test_ops.R
 985688e5b84e698baddf7b7e013194ea *inst/tinytest/test_xts.R
 f6cd938c98e7b474d93498354a8c987d *inst/tinytest/test_zoo.R
